fixed container clipping

--- a/src/pages/Index/style.css
+++ b/src/pages/Index/style.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .img {
